--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="#">bring it on back<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
+                      <a class="nav-link" href="portfolio.html">What's on the menu</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                      <a class="nav-link disabled" href="contact.html">Disabled</a>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
@@ -39,7 +39,7 @@
 
         <div class="container">
                 <div class="row">
-                  <div class="col-sm">
+                  <div class="col-8">
                     <div class="row">
                         <div class="col-sm">
                             <h1>about me</h1>
@@ -47,14 +47,28 @@
                     </div>    
                     <div class="row">
                         <div class="col-sm">
-                            picture
+                            <img src="images\robotfriend.jpg">
                         </div>
                         <div class="col-sm">
-                            text
+                            <div class="talky">
+                              Go out on a limb - that's where the fruit is. Work on one thing at a time. Don't get carried away - we have plenty of time. Let's build some happy little clouds up here. Get tough with it, get strong. That easy.
+
+We spend so much of our life looking - but never seeing. Maybe there's a happy little bush that lives right there. If you do too much it's going to lose its effectiveness. All you have to do is let your imagination go wild. You got your heavy coat out yet? It's getting colder. If you don't think every day is a good day - try missing a few. You'll see.
+
+And maybe, maybe, maybe... Trees live in your fan brush, but you have to scare them out. A big strong tree needs big strong roots. Be brave. Only God can make a tree - but you can paint one.
+
+A happy cloud. You don't have to spend all your time thinking about what you're doing, you just let it happen. Everyone wants to enjoy the good parts - but you have to build the framework first.
+
+In life you need colors. Let that brush dance around there and play. That's crazy.
+
+Even trees need a friend. We all need friends. We'll do another happy little painting. If we're going to have animals around we all have to be concerned about them and take care of them.
+
+You can create beautiful things - but you have to see them in your mind first. Just let this happen. We just let this flow right out of our minds. Maybe there's a happy little waterfall happening over here. I thought today we would make a happy little stream that's just running through the woods here.
+                            </div>
                         </div>
                     </div>    
                   </div>
-                    <div class="col-sm">
+                    <div class="col-4">
                             <div class="card" style="width: 18rem;">
                                     <div class="card-body">
                                       <h5 class="card-title">Card title</h5>
